--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -1,11 +1,14 @@
 .not-found {
   padding: 246px 0 60px;
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1280px;
   display: flex;
   background-color: #fff;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   text-align: center;
@@ -42,4 +45,9 @@
   line-height: 17px;
   color: #2BE080;
   text-decoration: none;
+}
+
+.note-found__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
