--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -51,3 +51,30 @@
   cursor: pointer;
   opacity: 0.7;
 }
+
+@media (max-width: 768px) {
+  .not-found {
+    padding: 408px 0 222px;
+  }
+}
+
+@media (max-width: 320px) {
+  .not-found {
+    padding: 329px 0 30px;
+  }
+  .not-found__title {
+    font-size: 80px;
+    line-height: 97px;
+    width: 300px;
+    min-height: 97px;
+  }
+  .not-found__subtitle {
+    font-size: 12px;
+    line-height: 15px;
+    margin: 10px 0 284px;
+  }
+  .note-found__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
