--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,5 @@
 @import url(./components/PageNotFound/PageNotFound.css);
 
 @import url(./components/Preloader/Preloader.css);
+
+@import url(./components/Footer/Footer.css);
