feat: add Techs component

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,5 @@
 @import url(./components/Preloader/Preloader.css);
 
 @import url(./components/Footer/Footer.css);
+
+@import url(./components/Techs/Techs.css);
