--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,5 @@
 @import url(./components/Footer/Footer.css);
 
 @import url(./components/Techs/Techs.css);
+
+@import url(./components/Promo/Promo.css);
