feat: add AboutProject component

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,5 @@
 @import url(./components/Techs/Techs.css);
 
 @import url(./components/Promo/Promo.css);
+
+@import url(./components/AboutProject/AboutProject.css);
