--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
 @import url(./components/Promo/Promo.css);
 
 @import url(./components/AboutProject/AboutProject.css);
+
+@import url(./components/AboutMe/AboutMe.css);
+
+@import url(./components//Portfolio/Portfolio.css);
