--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,5 @@
 @import url(./components/AboutMe/AboutMe.css);
 
 @import url(./components//Portfolio/Portfolio.css);
+
+@import url(./components/Portfolio/Portfolio.css);
