--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,5 @@
 @import url(./components//Portfolio/Portfolio.css);
 
 @import url(./components/Portfolio/Portfolio.css);
+
+@import url(./components/Header/Header.css);
