--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@
 @import url(./components/Portfolio/Portfolio.css);
 
 @import url(./components/Header/Header.css);
+
+@import url(./components/Register/Register.css);
+
+@import url(./components/Login/Login.css);
