--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,5 @@
 @import url(./components/Register/Register.css);
 
 @import url(./components/Login/Login.css);
+
+@import url(./components/Profile/Profile.css);
