--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,10 +14,10 @@
   background-color: #FAFAFA;
 }
 
-/* .footer__content {
+.footer__content {
   max-width: 1140px;
   width: 100%;
-} */
+}
 
 .footer__title {
   max-width: 1140px;
