--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -69,7 +69,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: #FF6838;
+  background: #EE3465;
+  /* background: #FF6838; */
   border-radius: 50px;
 }
 
@@ -91,6 +92,7 @@
 
 .preloader__round::before {
   z-index: 10;
-  background: #FF6838;
+  background: #EE3465;
+  /* background: #FF6838; */
   animation: preloader-inside-red 1s ease-in-out infinite;
 }
