--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,13 @@
 @import url(./components/Login/Login.css);
 
 @import url(./components/Profile/Profile.css);
+
+@import url(./components/SavedMovies/SavedMovies.css);
+
+@import url(./components/MoviesCard/MoviesCard.css);
+
+@import url(./components/MoviesCardList/MoviesCardList.css);
+
+@import url(./components/Movies/Movies.css);
+
+@import url(./components/SearchForm/SearchForm.css);
