--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,7 +49,7 @@
   justify-content: center;
   align-items: center;
   font: inherit;
-  display: none;
+  /* display: none; */
 }
 
 .header__page:hover {
