--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,6 @@
 
 @import url(./components/AboutMe/AboutMe.css);
 
-@import url(./components//Portfolio/Portfolio.css);
-
 @import url(./components/Portfolio/Portfolio.css);
 
 @import url(./components/Header/Header.css);
@@ -37,3 +35,5 @@
 @import url(./components/Movies/Movies.css);
 
 @import url(./components/SearchForm/SearchForm.css);
+
+@import url(./components/Main/Main.css);
