--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,6 @@
 
 @import url(./components/Header/Header.css);
 
-@import url(./components/Register/Register.css);
-
-@import url(./components/Login/Login.css);
-
 @import url(./components/Profile/Profile.css);
 
 @import url(./components/SavedMovies/SavedMovies.css);
@@ -36,4 +32,6 @@
 
 @import url(./components/SearchForm/SearchForm.css);
 
-@import url(./components/Main/Main.css);
+@import url(./components/Form/Form.css);
+
+@import url(./components/Section/Section.css);
