--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,10 @@
   line-height: 16px;
 }
 
+.header_type_loggedIn {
+  background-color: #fff;
+}
+
 .header__content {
   max-width: 1140px;
   width: 100%;
@@ -23,67 +27,4 @@
   width: 38px;
   height: 38px;
   margin-right: 55px;
-}
-
-.header__nav {
-  display: flex;
-  max-width: 1102px;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.header__pages {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  max-width: 212px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__page {
-  text-decoration: none;
-  color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font: inherit;
-  /* display: none; */
-}
-
-.header__page:hover {
-  opacity: 0.7;
-}
-
-.header__links {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  max-width: 183px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__link {
-  font: inherit;
-  color: #fff;
-  text-decoration: none;
-}
-
-.header__link:nth-of-type(2) {
-  color: #000;
-  background-color: #2BE080;
-  width: 76px;
-  height: 32px;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__link:hover {
-  opacity: 0.7;
 }
