--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -10,6 +10,10 @@
   font-weight: normal;
 }
 
+.section:nth-of-type(3) {
+  background-color: #F5F5F5;
+}
+
 .section__content {
   max-width: 1140px;
   width: 100%;
