--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,5 @@
 @import url(./components/Form/Form.css);
 
 @import url(./components/Section/Section.css);
+
+@import url(./components/Navigation/Navigation.css);
