--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,5 @@
 @import url(./components/Section/Section.css);
 
 @import url(./components/Navigation/Navigation.css);
+
+@import url(./components/FormInput/FormInput.css);
