--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -36,6 +36,7 @@
   border-bottom: 1px solid #E8E8E8;
   white-space: nowrap;
   overflow: hidden;
+  outline: none;
 }
 
 .form__input:hover {
@@ -79,3 +80,31 @@
   line-height: 12px;
   color: #EE3465;
 }
+
+.form__input_place_movies {
+  margin: 0;
+  padding: 0;
+  height: 62px;
+  width: 100%;
+  max-width: 1140px;
+  display: flex;
+  justify-content: space-between;
+  font: Inter;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 34px;
+  text-align: center;
+  outline: none;
+  border-bottom: 0;
+}
+
+/*.form__label_place_movies {
+  font: Inter;
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 34px;
+  text-align: center;
+  color: #A0A0A0;
+}*/
