--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,8 @@
 .search {
   margin: 50px 0;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: Inter;
   align-self: center;
   max-width: 1140px;
@@ -16,9 +18,20 @@
 .search__box {
   margin: 0;
   padding: 0;
+  width: 100%;
+  max-width: 1140px;
+  border-bottom: 1px solid #E8E8E8;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.search__box:hover {
+  transition: background-color .5s ease-in-out;
+  background-color: #E8E8E8;
+  opacity: 0.7;
+  cursor: pointer;
+  border-radius: 3px;
 }
 
 .search__title {
@@ -41,20 +54,18 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  border: 0;
-  border-bottom: 1px solid #E8E8E8;
   display: flex;
   align-items: center;
   margin-top: 15px;
   line-height: 20px; /* изменить?? */
 }
 
-.search__input:hover {
+/* .search__input:hover {
   transition: background-color .5s ease-in-out;
   background-color: #E8E8E8;
   opacity: 0.7;
   cursor: pointer;
-}
+} */
 
 .search__icon {
   width: 34px;
