--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,5 @@
 @import url(./components/Navigation/Navigation.css);
 
 @import url(./components/FormInput/FormInput.css);
+
+@import url(./components/FilterCheckbox/FilterCheckbox.css);
