--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -13,7 +13,7 @@
   margin-top: 0;
 }
 
-/* .form__label_type_loggedin {
+.form__label_type_loggedin {
   margin: 0;
   font-weight: 500;
   font-size: 11px;
@@ -21,12 +21,7 @@
   color: #000000;
   margin-bottom: -23px;
   z-index: 1;
-} */
-
-/* .form__label_type_loggedin:nth-of-type(2) {
-  border-bottom: 0;
-  margin-top: -23px;
-} */
+}
 
 .form__input {
   margin: 0;
@@ -34,6 +29,8 @@
   height: 32px;
   border: 0;
   border-bottom: 1px solid #E8E8E8;
+  margin-bottom: 17px;
+  padding-bottom: 9px;
   white-space: nowrap;
   overflow: hidden;
   outline: none;
@@ -52,7 +49,7 @@
 
 /* .form__input:valid {
   border-bottom: 1px solid #2BE080;
-}
+} */
 
 .form__input_type_loggedin {
   max-width: 410px;
@@ -65,7 +62,7 @@
 
 .form__input_type_loggedin:nth-of-type(2) {
   border-bottom: transparent;
-} */
+}
 
 .form__input_type_sucsess {
   border-color: #2BE080;
@@ -97,14 +94,3 @@
   outline: none;
   border-bottom: 0;
 }
-
-/*.form__label_place_movies {
-  font: Inter;
-  margin: 0;
-  padding: 0;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  text-align: center;
-  color: #A0A0A0;
-}*/
