--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,6 +1,6 @@
 .portfolio {
   margin: 0 0 125px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   display: flex;
   flex-direction: column;
 }
