--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   background-color: #5C5C5C;
   min-height: 560px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
