--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   align-self: center;
   max-width: 1140px;
   width: 100%;
@@ -20,6 +20,7 @@
   padding: 0;
   width: 100%;
   max-width: 1140px;
+  border: none;
   border-bottom: 1px solid #E8E8E8;
   display: flex;
   align-items: center;
