feat: add error popup & images

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,5 @@
 @import url(./components/FilterCheckbox/FilterCheckbox.css);
 
 @import url(./components/Button/Button.css);
+
+@import url(./components/ErrorPopup/ErrorPopup.css);
