--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -56,6 +56,11 @@
   color: #000;
 }
 
+.button_place_movies:hover {
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.09);
+  transition: box-shadow .5s linear;
+}
+
 .button_place_card {
   margin: 0;
   padding: 0;
