--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,8 @@
 .page {
   margin: 0 auto;
   min-width: 320px;
+  display: flex;
+  flex-direction: column;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
