--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -95,3 +95,23 @@
   outline: none;
   border-bottom: 0;
 }
+
+.form__input_place_movies::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  margin: 3px 3px 0 0;
+  padding: 0;
+  width: 34px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(../../images/1.svg) no-repeat;
+  background-size: cover;
+  cursor: pointer;
+}
+
+.form__input_place_movies::-webkit-search-cancel-button:hover {
+  opacity: 0.7;
+  cursor: pointer;
+  transition: opacity .5s ease-in-out;
+}
