--- a/src/components/ErrorPopup/ErrorPopup.css
+++ b/src/components/ErrorPopup/ErrorPopup.css
@@ -11,7 +11,7 @@
   right: 0;
   z-index: 1;
 
-  /* для показа модального окна по /signin, /signup, /profile закоментить код ниже */
+  /* для показа модального окна по /signin, /signup, /profile закомментить код ниже */
 
   visibility: hidden;
   opacity: 0;
