--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,6 +2,7 @@
   display: flex;
   max-width: 1102px;
   width: 100%;
+  align-items: center;
   justify-content: space-between;
   font-family: 'Inter', Arial, sans-serif;
 }
@@ -14,7 +15,6 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .nav__page {
@@ -25,6 +25,10 @@
   align-items: center;
   font: inherit;
   display: none;
+}
+
+.nav__page_type_loggedIn {
+ display: flex;
 }
 
 .nav__page:hover {
@@ -49,6 +53,10 @@
   text-decoration: none;
 }
 
+.nav__links_type_loggedIn {
+  display: none;
+}
+
 .nav__link:nth-of-type(2) {
   color: #000;
   background-color: #2BE080;
@@ -63,4 +71,44 @@
 .nav__link:hover {
   opacity: 0.7;
   transition: opacity .5s ease-in-out;
+}
+
+.nav__accaunt {
+  margin: 0;
+  padding: 9px 12px;
+  width: 100px;
+  height: 32px;
+  border: 2px solid #E8E8E8;
+  box-sizing: border-box;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  display: none;
+}
+
+.nav__accaunt_type_loggedIn {
+  display: flex;
+}
+
+.nav__accaunt:hover {
+  opacity: 0.7;
+  transition: opacity .5s ease-in-out;
+  cursor: pointer;
+}
+
+.nav__icon {
+  width: 12px;
+  height: 14px;
+  margin-right: 7px;
+}
+
+.nav__text {
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #000000;
 }
