--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -61,6 +61,8 @@
   max-width: 1140px;
   width: 100%;
   min-height: 86px;
+  font-size: 14px;
+  line-height: 17px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -78,8 +80,6 @@
 
 .project__text_type_grey {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
   color: #A0A0A0;
   display: flex;
   justify-content: center;
@@ -102,4 +102,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 900px) {
+  .project__items {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 690px) {
+  .project__columns {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project__subtitle {
+    margin-top: 60px;
+    margin-bottom: 16px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .project__text {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .project__items {
+    margin-top: 60px;
+    font-size: 11px;
+    line-height: 13px;
+    min-height: 80px;
+  }
 }
