--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .page {
   margin: 0 auto;
+  padding: 0;
   min-width: 320px;
   display: flex;
   flex-direction: column;
@@ -11,3 +12,15 @@
   text-rendering: optimizeLegibility;
   font-family: 'Inter', Arial, sans-serif;
 }
+
+/* @media (max-width: 1020px) {
+  .page {
+    padding: 0 44px;
+  }
+}
+
+@media (max-width: 768px) {
+  .page {
+    padding: 0 30px;
+  }
+} */
