--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
-  padding-bottom: 20px;
+  margin: 0;
+  padding: 0 70px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,8 +15,8 @@
 }
 
 .footer__content {
-  width: 100%;
   max-width: 1140px;
+  width: 100%;
 }
 
 .footer__title {
@@ -67,9 +68,36 @@
   color: #000;
 }
 
+@media (max-width: 900px) {
+  .footer {
+    padding: 0 50px 20px;
+  }
+}
+
 @media (max-width: 768px) {
   .footer {
-    max-width: 708px;
+    background-color: #fff;
+  }
+}
+
+@media (max-width: 690px) {
+  .footer {
+    padding: 0 18px 10px;
+  }
+
+  .footer__columns {
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    flex-direction: column;
+  }
+
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+    min-height: 69px;
+    height: 100%;
+    margin-bottom: 30px;
   }
 }
 
@@ -78,21 +106,8 @@
     font-size: 12px;
     line-height: 15px;
     padding-bottom: 10px;
-    max-width: 300px;
   }
-  .footer__columns {
-    align-items: center;
-    justify-content: center;
-    padding-top: 30px;
-    flex-direction: column;
-  }
-  .footer__links {
-    flex-direction: column;
-    align-items: center;
-    min-height: 69px;
-    height: 100%;
-    margin-bottom: 30px;
-  }
+
   .footer__copyright {
     color: #A0A0A0;
   }
