--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,6 +1,16 @@
 .movies {
+  margin: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
+  border: 1px solid red;
+}
+
+.movies__content {
+  max-width: 1140px;
+  width: 100%;
+  border: 1px solid blue;
 }
