--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,12 +1,20 @@
 .cards {
-  margin: 70px 0 50px;
+  margin: 119px 0 50px;
   padding: 0;
   display: grid;
   max-width: 1140px;
   width: 100%;
   list-style: none;
-  justify-items: center;
   gap: 32px 28px;
   grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
-  align-self: center;
+  border: 1px solid red;
+  place-items: center;
+}
+
+@media (max-width: 540px) {
+  .cards {
+    margin-top: 90px;
+    gap: 14px;
+    max-width: 300px;
+  }
 }
