--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,5 +1,6 @@
 .portfolio {
-  margin: 0 0 125px;
+  margin: 0;
+  padding: 0 70px 125px;
   font-family: 'Inter', Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -33,6 +34,18 @@
   width: 100%;
 }
 
+.portfolio__border {
+  display: flex;
+  max-width: 1140px;
+  width: 100%;
+  border-bottom: 1px solid #E8E8E8;
+  padding-bottom: 19px;
+}
+
+.portfolio__border:last-of-type {
+  border-bottom: none;
+}
+
 .portfolio__link {
   margin: 0;
   color: #000;
@@ -40,13 +53,11 @@
   font: inherit;
   font-size: 30px;
   line-height: 50px;
-  border-bottom: 1px solid #E8E8E8;
-  padding-bottom: 19px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   max-width: 1140px;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .portfolio__link:hover {
@@ -55,7 +66,47 @@
   cursor: pointer;
 }
 
+.portfolio__link:last-of-type {
+  border-bottom: none;
+}
+
 .portfolio__icon {
   width: 25px;
   height: 25px;
+}
+
+@media (max-width: 900px) {
+  .portfolio {
+    padding: 0 50px 90px;
+  }
+
+  .portfolio__link {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 690px) {
+  .portfolio {
+    padding: 0 18px 70px;
+  }
+
+  .portfolio__title {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .portfolio__links {
+    margin-top: 40px;
+    min-height: 162px;
+  }
+
+  .portfolio__link {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .portfolio__icon {
+    width: 10px;
+    height: 10px;
+  }
 }
