--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,5 +1,5 @@
 .promo {
-  margin: 0 auto;
+  margin: 0;
   background-color: #5C5C5C;
   min-height: 560px;
   font-family: 'Inter', Arial, sans-serif;
@@ -14,9 +14,10 @@
 .promo__content {
   max-width: 1140px;
   width: 100%;
-  padding: 50px 70px 60px;
+  padding: 50px 44px 60px;
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .promo__title {
@@ -31,42 +32,57 @@
 .promo__image {
   align-self: flex-end;
   margin-top: 102px;
-  width: 722px;
-  height: 244px;
+  max-width: 722px;
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@media (max-width: 678px) {
+@media (max-width: 1020px) {
   .promo__content {
-    max-width: 668px;
-    justify-content: center;
-    padding: 300px 0 70px;
+    align-items: center;
     text-align: center;
   }
-  .promo__title {
-    max-width: 680px;
-  }
+
   .promo__image {
-    width: 680px;
+    margin-top: 140px;
+    align-self: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .promo__content {
+    padding-top: 300px;
+    padding-bottom: 70px;
+  }
+
+  .promo__image {
     height: 230px;
   }
 }
 
-@media (max-width: 320px) {
-  .promo {
-    font-size: 30px;
+@media (max-width: 690px) {
+  .promo__content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .promo__title {
+    font-size: 31px;
     line-height: 39px;
+    max-width: 450px;
   }
-  .promo__content {
-    max-width: 668px;
-    justify-content: center;
-    padding: 183px 0 40px;
-    text-align: center;
-  }
+}
+
+@media (max-width: 500px) {
   .promo__title {
-    max-width: 320px;
+    max-width: 340px;
   }
-  .promo__image {
-    width: 320px;
-    height: 230px;
+}
+
+@media (max-width: 350px) {
+  .promo__title {
+    max-width: 300px;
   }
 }
