--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -71,3 +71,55 @@
   opacity: 0.7;
   cursor: pointer;
 }
+
+@media (max-width: 1020px) {
+  .promo__content {
+    align-items: center;
+    text-align: center;
+  }
+
+  .promo__image {
+    margin-top: 140px;
+    align-self: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .promo__content {
+    padding-top: 300px;
+    padding-bottom: 70px;
+  }
+
+  .promo__image {
+    height: 230px;
+  }
+}
+
+@media (max-width: 690px) {
+  .promo__content {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .promo__title {
+    font-size: 31px;
+    line-height: 39px;
+    max-width: 450px;
+  }
+
+  .search__icon {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .promo__title {
+    max-width: 340px;
+  }
+}
+
+@media (max-width: 350px) {
+  .search {
+    max-width: 300px;
+  }
+}
