--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -1,6 +1,6 @@
 .section {
   margin: 0;
-  padding: 110px 0 110px;
+  padding: 110px 70px 100px;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -27,4 +27,27 @@
   line-height: 27px;
   border-bottom: 1px solid #000;
   padding-bottom: 23px;
+}
+
+@media (max-width: 900px) {
+  .section {
+    padding-left: 50px;
+    padding-right: 50px;
+
+  }
+}
+@media (max-width: 690px) {
+  .section {
+    padding: 70px 18px;
+  }
+
+  .section:nth-of-type(3) {
+    background-color: #fff;
+  }
+
+  .section__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
 }
