--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -33,6 +33,7 @@
   justify-items: center;
   gap: 10px;
   max-width: 700px;
+  width: 100%;
   min-height: 60px;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
 }
@@ -58,12 +59,40 @@
   cursor: pointer;
 }
 
-@media (max-width: 678px) {
-  .techs__items {
-    max-width: 650px;
+@media (max-width: 1020px) {
+  .techs__text {
+    font-size: 12px;
+    line-height: 18px;
   }
+
+  .techs__items {
+    margin-top: 83px;
+  }
+
   .techs__item {
     width: 84px;
+    height: 57px;
+  }
+}
+
+@media (max-width: 690px) {
+  .techs__items {
+    max-width: 650px;
+    margin-top: 50px;
+  }
+
+  .techs__subtitle {
+    font-size: 30px;
+    line-height: 36px;
+    margin: 60px 0 24px;
+  }
+
+  .techs__text {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .techs__item {
     font-size: 12px;
     line-height: 15px;
   }
@@ -72,8 +101,5 @@
 @media (max-width: 320px) {
   .techs__items {
     width: 210px;
-  }
-  .techs__item {
-    width: 99px;
   }
 }
