--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -27,6 +27,8 @@
   margin: 0;
   padding: 0;
   height: 32px;
+  max-width: 396px;
+  width: 100%;
   border: 0;
   border-bottom: 1px solid #E8E8E8;
   margin-bottom: 17px;
@@ -112,10 +114,17 @@
 }
 
 @media (max-width: 690px) {
+  .form__input {
+    max-width: 260px;
+    margin-bottom: 0;
+    padding-bottom: 9px;
+  }
+
   .form__input_place_movies {
     text-align: start;
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 0;
+    max-width: 100%;
   }
 }
