--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  max-width: 1140px;
+  /* max-width: 1140px; */
   border: none;
   border-bottom: 1px solid #E8E8E8;
   display: flex;
@@ -58,7 +58,7 @@
   display: flex;
   align-items: center;
   margin-top: 15px;
-  line-height: 20px; /* изменить?? */
+  line-height: 20px;
 }
 
 .search__icon {
