--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
+  padding: 0 70px;
 }
 
 .header_type_loggedIn {
@@ -26,11 +27,22 @@
 .header__icon {
   width: 38px;
   height: 38px;
-  margin-right: 55px;
 }
 
 .header__icon:hover {
   transition: opacity .5s ease-in-out;
   opacity: 0.7;
   cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .header {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 690px) {
+  .header {
+    padding: 0 18px 20px;
+  }
 }
