--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   justify-content: space-between;
   list-style-type: none; /* перенести в класс списка */
   font-family: 'Inter', Arial, sans-serif;
@@ -12,8 +13,13 @@
   background: #FDFDFD;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   max-width: 360px;
+  width: 100%; /* test */
   min-height: 319px;
   box-sizing: border-box;
+}
+
+.card:last-of-type {
+  padding-bottom: 0;
 }
 
 .card__info {
@@ -46,7 +52,8 @@
 .card__image {
   margin: 0;
   padding: 0;
-  width: 360px;
+  max-width: 360px;
+  width: 100%;
 }
 
 @media (max-width: 1020px) {
@@ -61,9 +68,14 @@
   }
 }
 
+@media (max-width: 900px) {
+  .card__info {
+    max-width: 300px;
+  }
+}
+
 @media (max-width: 540px) {
   .card {
-    max-width: 300px;
     min-height: 271px;
   }
 
@@ -73,7 +85,7 @@
   }
 
   .card__info {
-    max-width: 272px;
+    max-width: 280px;
   }
 
   .card__title {
