--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -33,7 +33,7 @@
   justify-items: center;
   gap: 10px;
   max-width: 700px;
-  width: 100%;
+  /* width: 100%; */
   min-height: 60px;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
 }
@@ -77,7 +77,7 @@
 
 @media (max-width: 690px) {
   .techs__items {
-    max-width: 650px;
+    max-width: 350px;
     margin-top: 50px;
   }
 
