--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -18,10 +18,6 @@
   box-sizing: border-box;
 }
 
-.card:last-of-type {
-  padding-bottom: 0;
-}
-
 .card__info {
   margin: 0;
   padding: 0;
@@ -77,6 +73,7 @@
 @media (max-width: 540px) {
   .card {
     min-height: 271px;
+    padding: 14px;
   }
 
   .card__image {
