refactor: big Header update

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,8 +21,10 @@
   width: 100%;
   padding: 18px 0;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
+  align-items: center;
 }
+
 
 .header__icon {
   width: 38px;
