--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -78,7 +78,8 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
 }
 
-.button_place_card_delete {
+.button_place_card-delete {
+  margin-top: 0;
   background-image: url(../../images/close_icon.svg);
   background-color: #F9F9F9;
   background-repeat: no-repeat;
@@ -94,7 +95,8 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
 }
 
-.button_place_card_active {
+.button_place_card-active {
+  margin-top: 0;
   background-image: url(../../images/icon__COLOR_invisible.svg);
   background-color: #EE3465;
   background-repeat: no-repeat;
@@ -108,6 +110,17 @@
   line-height: 11px;
   background-position: center;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
+}
+
+.button_place_not-found {
+  margin-top: 283px;
+  width: 42px;
+  height: 17px;
+  font-size: 14px;
+  line-height: 17px;
+  color: #2BE080;
+  text-decoration: none;
+  background-color: transparent;
 }
 
 @media (max-width: 690px) {
@@ -126,6 +139,16 @@
   .button_place_card {
     width: 100px;
     margin-top: 0;
+  }
+
+  .button_place_card-active {
+    margin-top: 0;
+    width: 100px;
+  }
+
+  .button_place_card-delete {
+    margin-top: 0;
+    width: 100px;
   }
 
   .button_place_movies {
