--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -125,6 +125,9 @@
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 0;
+    padding-bottom: 0;
     max-width: 100%;
+    display: flex;
+    justify-content: center;
   }
 }
