--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -13,7 +13,7 @@
   background: #FDFDFD;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   max-width: 360px;
-  width: 100%; /* test */
+  width: 100%;
   min-height: 319px;
   box-sizing: border-box;
 }
